--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: "3.11"
+        run: pip install -r requirements.txt
 
     - name: Install dependencies
       run: |
